# fast-api-exercise

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  fly.toml  logging.ini  pyproject.toml
.github/workflows/: pipeline.yaml
fast_api_exercise/: app.py  database.py  schemas.py  security.py  settings.py
fast_api_exercise/models/: user.py
fast_api_exercise/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 027178f46f62_add_update_at_column.py  71961b3c69a2_create_users_table.py  77f0f276ea65_create_todos_table.py  95f0c87108f2_add_new_columns.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
